--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,8 +8,17 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -47,6 +56,17 @@
             android:name="net.skywodd.yetanotherparcelmanager.activities.ConverterActivity"
             android:label="@string/title_activity_converter" >
         </activity>
+        <activity
+            android:name="net.skywodd.yetanotherparcelmanager.activities.LocalisationActivity"
+            android:label="@string/title_activity_localisation" >
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBGIgYRgXOqrufw4GnhAWkMHhd973HjWxw" />
     </application>
 
 </manifest>
